--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,55 @@
-# Compiled class file
-*.class
+######################
+# Windows
+######################
+# Windows image file caches
+Thumbs.db
 
-# Log file
+# Folder config file
+Desktop.ini
+
+######################
+# Mac OSX
+######################
+.DS_Store
+.svn
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+######################
+# Directories
+######################
+/bin/
+/deploy/
+
+######################
+# Logs
+######################
 *.log
 
-# BlueJ files
-*.ctxt
+######################
+# Others
+######################
+*.class
+*.*~
+*~
+.merge_file*
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+######################
+# Gradle Wrapper
+######################
+!gradle/wrapper/gradle-wrapper.jar
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+######################
+# Maven Wrapper
+######################
+!.mvn/wrapper/maven-wrapper.jar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+######################
+# ESLint
+######################
+.eslintcache
